@@ -1,0 +1,3 @@
+/* { dg-do compile } */
+
+""[:][:][0] += 0; /* { dg-error "" } */
